# mapintel

./: .copier-answers.yml  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  doc2vec_gensim.py  docker-compose.yml  environment.yml  mkdocs.yml  news_experiments.py  noxfile.py  ocr_exercise.py  pyproject.toml  requirements.txt  setup.py  test_doc2vec.xlsx  test_results_doc2vec.xlsx  utility.py  word2vec_tf.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml
api/: Dockerfile  DockerfileCPU  DockerfileGPU  README.md  application.py  config.py  init_api.sh  init_container.sh  load_backups.py  pipelines.yaml  requirements.txt  utils.py
api/controller/: feedback.py  file_upload.py  news_upload.py  router.py  search.py  topic.py  umap.py  upload.py  utils.py
api/custom_components/: bertopic.py  custom_nodes.py  custom_pipe.py  custom_pipeline.py  text_cleaner.py  top2vec.py
arquivopt/: LICENSE  README.md  requirements.txt
arquivopt/src/: __init__.py
arquivopt/src/data/: crawler.py  data_pull.py
arquivopt/test/: test_crawler.py
data_pipelines/: README.md
data_pipelines/collection/newsapi_sam_app/: .gitignore  README.md  template.yaml
data_pipelines/collection/newsapi_sam_app/newsapi/: app.py  requirements.txt
data_pipelines/preprocess/: arquivo.py  newsapi.py
docker/: Dockerfile-api-cpu  Dockerfile-api-gpu  build_images.sh  init_api.sh  push_images.sh
docs/: Makefile  conf.py  index.rst  make.bat
docs/examples/: README.md
experiments/: Dockerfile  Makefile  README.md  requirements.txt  results.py  results2.py  setup.py  utils.py
experiments/notebooks/: .gitattributes  Top2Vec.ipynb  bokeh_umatrix_hex.ipynb  doc2vec_gensim.ipynb  elasticsearch_exploration.ipynb  feature_embedding_analysis.ipynb  haystack_information_retrieval_pipeline.ipynb  logloss_function.ipynb  mongodb_exploration.ipynb  ocr_exercise.ipynb  requirements.txt  results_exploration.ipynb  top2vec.ipynb  topic_coherence.ipynb  topic_modeling_comparison.ipynb
experiments/research/: .gitignore  bibliography.bib  main.tex
experiments/research/assets/: IR_mapintel_system.odg  results.csv
experiments/src/: __init__.py  top2vec.py
experiments/src/data/: make_dataset_interim.py  make_dataset_processed.py
experiments/src/features/: doc2vec.py  doc2vec_eval.py  vectorizer.py  vectorizer_eval.py
experiments/src/som/: som_clustering.py  som_tuning.py
experiments/src/visualization/: embedding_space.py
initial/: LICENSE  README.md  requirements.txt  setup.py
initial/mapintel/: __init__.py
initial/mapintel/visualization/: __init__.py  _utils.py
initial/scripts/: 0.0-requirements.txt  0.1-basic-pipeline.py  0.2-streamlit-app.py  1.1-basic-pipeline.py  1.2-streamlit-app.py
kubernetes/: README.md  kubemanifest-cpu.yaml  kubemanifest-gpu.yaml  kubemanifest-pv-cpu.yaml  kubemanifest-pv-gpu.yaml
models/: embedding_predictive_scores.csv  senteval_results.json
models/ocr/: abstract.txt
models/ocr_outputs/: ac706a48-3afd-48d0-99d7-ac0a6c5994f3-1.txt  ac706a48-3afd-48d0-99d7-ac0a6c5994f3-2.txt
mongodb_insertion/: get_lambda_vars.py  lambda_function.py  unique_index.py
notebooks/: Mongodb_exploration.ipynb  bokeh_umatrix_hex.ipynb  doc2vec_gensim.ipynb  doc2vec_gensim.py  feature_embedding_analysis.ipynb  haystack_information_retrieval_pipeline.ipynb  logloss_function.ipynb  mongodb_exploration.ipynb  news_experiments.ipynb  ocr_exercise.ipynb  vec4ir_experiments.ipynb  word2vec_tf.py
outputs/: results.json  test_doc2vec.xlsx  tfidf_vect.joblib  vocabulary_bow.json
reports/: .gitignore
reports/report0221/: bibliography.bib  main.tex
reports/report0221/figures/: IR_mapintel_system.odg
research/: README.md  requirements.txt
research/docs/: bibliography.bib  main.tex
research/docs/assets/: IR_mapintel_system.odg
research/notebooks/: 20newsgroup.ipynb  Top2Vec.ipynb  bokeh_umatrix_hex.ipynb  elasticsearch_exploration.ipynb  paper_figures.ipynb  requirements.txt  results_exploration.ipynb  topic_modeling_comparison.ipynb
scripts/: doc2vec_gensim.py  multirun.sh  news_experiments.py  ocr_exercise.py  senteval_methods.py  senteval_train.py  setup.sh  utility.py  vec4ir_experiments.py
src/: __init__.py  bertopic.py  text_cleaner.py  train_cross_encoder.py  utility.py  utils.py
src/cluster/: som.py  som_clustering.py  som_clustering_inigo.py  som_tuning.py
src/data/: make_dataset.py  make_dataset_interim.py  make_dataset_processed.py  mongodb_doc_insert.py  text_preprocessing.py
src/data/newsapi_mongodb/: get_env.py  lambda_function.py  unique_index.py
src/features/: doc2vec.py  doc2vec_eval.py  embedding_eval.py  embedding_extractor.py  features_eval.py  vectorizer.py  vectorizer_eval.py
src/mapintel/: __init__.py  __main__.py  cli.py
src/mapintel/services/: api_endpoint.py  docker-compose.yml
src/mapintel/services/account/: Dockerfile  main.py
src/mapintel/services/account-docker/: config.py  entrypoint.sh  requirements.txt
src/mapintel/services/service1/: model.pickle
src/mapintel/ui/: requirements.txt  utils.py  webapp.py
src/models/: senteval_evaluation.py  senteval_methods.py  senteval_train.py
src/som/: som_clustering.py  som_tuning.py
src/visualization/: embedding_space.py  tsne_tuning.py
tests/: __init__.py  test_cli.py
tests/services/dim_reduc/: test_dim_reduc.py
tests/services/model_database/: test_model_database.py
tests/services/service1/: test_service1.py
tests/services/service2/: test_service2.py
tests/services/service3/: test_service3.py
tests/services/service5/: test_service5.py
tests/services/topic_modelling/: test_topic_modelling.py
tests/services/vectorization/: test_vectorization.py
ui/: 2.1-basic-pipeline.py  Dockerfile  README.md  requirements.txt  utils.py  webapp.py
ui/custom_components/: umap.py  utils.py
ui/ui_components/: __init__.py  umap_search.py  umatrix_search.py  utils.py
ui/vis_components/: __init__.py  umap.py  umatrix.py  utils.py
(+65 files in other folders)
