[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "mapintel"
description = "MapIntel is a system for acquiring intelligence from vast collections of text data by representing each document as a multidimensional vector that captures its own semantics. The system is designed to handle complex Natural Language queries and visual exploration of the corpus."
authors = [{name = "Georgios Douzas", email = "gdouzas@icloud.com"}, {name = "Stuart Gallina Ottersen", email = "ottersenstuart@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<3.11"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.85.1",
    "uvicorn>=0.19.0",
    "cloudpickle>=2.2.0",
    "mlflow>=1.30.0",
    "python-multipart>=0.0.5",
]

[project.urls]
Homepage = "https://NOVA-IMS-Innovation-and-Analytics-Lab.github.io/mapintel"
Documentation = "https://NOVA-IMS-Innovation-and-Analytics-Lab.github.io/mapintel"
Changelog = "https://NOVA-IMS-Innovation-and-Analytics-Lab.github.io/mapintel/changelog"
Repository = "https://github.com/NOVA-IMS-Innovation-and-Analytics-Lab/mapintel"
Issues = "https://github.com/NOVA-IMS-Innovation-and-Analytics-Lab/mapintel/issues"
Discussions = "https://github.com/NOVA-IMS-Innovation-and-Analytics-Lab/mapintel/discussions"
Gitter = "https://gitter.im/mapintel/community"
Funding = "https://github.com/sponsors/NOVA-IMS-Innovation-and-Analytics-Lab"

[project.scripts]
mapintel = "mapintel.cli:main"

[project.optional-dependencies]
[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.7"]
docs = [
    "mkdocs>=1.3",
    "mkdocs-coverage>=0.2",
    "mkdocs-gen-files>=0.3",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.3",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.18",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "toml>=0.10",
]
format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
maintain = [
    "git-changelog>=0.4",
]
quality = [
    "darglint>=1.8",
    "flake8<4",  # TODO: remove once importlib-metadata version conflict is resolved
    "flake8-bandit>=2.1",
    "flake8-black>=0.2",
    "flake8-bugbear>=21.9",
    "flake8-builtins>=1.5",
    "flake8-comprehensions>=3.7",
    "flake8-docstrings>=1.6",
    "flake8-pytest-style>=1.5",
    "flake8-string-format>=0.3",
    "flake8-tidy-imports>=4.5",
    "flake8-variables-names>=0.0",
    "pep8-naming>=0.12",
    "wps-light>=0.15",
]
tests = [
    "pytest>=6.2",
    "pytest-cov>=3.0",
    "pytest-randomly>=3.10",
    "pytest-xdist>=2.4",
    "nox>=2022.8.7",
    "scikit-learn>=1.1.3",
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
]
security = ["safety>=2"]

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "mapintel"
include_trailing_comma = true
